--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -82,8 +82,8 @@
       {% if author.foursquare %}
         <li><a href="https://foursquare.com/{{ author.foursquare }}"><i class="fab fa-fw fa-foursquare" aria-hidden="true"></i> Foursquare</a></li>
       {% endif %}
-      {% if author.steam %}
-        <li><a href="https://steamcommunity.com/id/{{ author.steam }}"><i class="fab fa-fw fa-steam-square" aria-hidden="true"></i> Steam</a></li>
+      {% if author.kaggle %}
+        <li><a href="https://kaggle.com/id/{{ author.kaggle }}"><i class="fab fa-fw fa-kaggle-square" aria-hidden="true"></i> Kaggle</a></li>
       {% endif %}
       {% if author.youtube %}
         <li><a href="https://www.youtube.com/user/{{ author.youtube }}"><i class="fab fa-fw fa-youtube" aria-hidden="true"></i> YouTube</a></li>
