--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -258,6 +258,12 @@ body:hover .visually-hidden button {
     color: $tumblr-color;
   }
 
+   
+  .fa-kaggle,
+  .fa-kaggle-square {
+    color: $kaggle-color;
+  }
+
   .fa-twitter,
   .fa-twitter-square {
     color: $twitter-color;
