--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -88,7 +88,7 @@ $stackoverflow-color        : #fe7a15;
 $tumblr-color               : #32506d;
 $twitter-color              : #55acee;
 $vimeo-color                : #1ab7ea;
-$vine-color                 : #00bf8f;
+$kaggle-color                 : #00bf8f;
 $youtube-color              : #bb0000;
 $xing-color                 : #006567;
 
