--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -91,6 +91,7 @@ $vimeo-color                : #1ab7ea;
 $kaggle-color                 : #00bf8f;
 $youtube-color              : #bb0000;
 $xing-color                 : #006567;
+$vine-color                 : #006567;
 
 
 /* links */
