--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -76,10 +76,10 @@
 .ai-dataverse-box:before {
   content: "\e817";
 }
-.ai-KIWI:before {
+.ai-Wiki:before {
   content: "\e818";
 }
-.ai-KIWI-square:before {
+.ai-Wiki-square:before {
   content: "\e819";
 }
 .ai-depsy:before {
