--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -49,8 +49,8 @@
       {% if author.linkedin %}
         <li><a href="https://www.linkedin.com/in/{{ author.linkedin }}"><i class="fab fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a></li>
       {% endif %}
-      {% if author.Wiki %}
-        <li><a href="{{ author.Wiki }}"><i class="ai ai-Wiki ai-fw" aria-hidden="true"></i> Wiki</a></li>
+      {% if author.Tech_Wiki %}
+        <li><a href="{{ author.Tech_Wiki }}"><i class="ai ai-Tech_Wiki ai-fw" aria-hidden="true"></i> Tech_Wiki</a></li>
       {% endif %}
       {% if author.xing %}
         <li><a href="https://www.xing.com/profile/{{ author.xing }}"><i class="fab fa-fw fa-xing-square" aria-hidden="true"></i> XING</a></li>
