--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -113,7 +113,7 @@
         <li><a href="{{ author.impactstory }}"><i class="ai ai-impactstory ai-fw"></i> Impactstory</a></li>
       {% endif %}
       {% if author.Tech_Wiki %}
-        <li><a href="{{ author.Tech_Wiki }}"><i class="ai ai-Tech_Wiki ai-fw" aria-hidden="true"></i> Tech_Wiki</a></li>
+        <li><a href="{{ author.Tech_Wiki }}"><i class="ai ai-Tech_Wiki-square ai-fw" ></i> Tech_Wiki</a></li>
       {% endif %}
       {% if author.wikipedia %}
         <li><a href="https://en.wikipedia.org/wiki/User:{{ author.wikipedia }}"><i class="fab fa-fw fa-wikipedia-w" aria-hidden="true"></i> Wikipedia</a></li>
