Enhance Tech Wiki icon styles in academicons.css
Added stroke and fill properties to Tech Wiki icons.

--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -203,11 +203,18 @@
   content: "\e861";
 }
 .ai-Tech_Wiki:before {
+  stroke: currentColor;
+  stroke-width: 20;
+  fill: none;
   content: "\e862";
 }
 .ai-Tech_Wiki-square:before {
+  stroke: currentColor;
+  stroke-width: 20;
+  fill: none;
   content: "\e863";
 }
+
 /*  Duplication of the FontAwesome style classes using 'ai' in place of 'fa'. */
 .ai-lg {
   font-size: 1.33333333em;
