--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -6,14 +6,15 @@
  */
 @font-face {
     font-family: 'Academicons';
-    src:url('../fonts/academicons.eot?v=1.8.0');
-    src:url('../fonts/academicons.eot?v=1.8.0') format('embedded-opentype'),
-        url('../fonts/academicons.ttf?v=1.8.0') format('truetype'),
-        url('../fonts/academicons.woff?v=1.8.0') format('woff'),
-        url('../fonts/academicons.svg?v=1.8.0#academicons') format('svg');
+    src:url('../fonts/academicons.eot?v=1.8.1');  /* Change version */
+    src:url('../fonts/academicons.eot?v=1.8.1') format('embedded-opentype'),
+        url('../fonts/academicons.ttf?v=1.8.1') format('truetype'),
+        url('../fonts/academicons.woff?v=1.8.1') format('woff'),
+        url('../fonts/academicons.svg?v=1.8.1#academicons') format('svg');
     font-weight: normal;
     font-style: normal;
 }
+
 .ai {
 	display:inline-block;
 	font:normal normal normal 14px/1 Academicons;
