--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -204,27 +204,7 @@
   content: "\e861";
 }
 
-.ai-Tech_Wiki:before {
-    content: "";
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M100 250 L225 750 L350 450 L500 750 L650 450 L775 750 L900 250 L900 200 L100 200 Z" fill="currentColor"/></svg>');
-    background-size: contain;
-    background-repeat: no-repeat;
-    vertical-align: middle;
-}
 
-.ai-Tech_Wiki-square:before {
-    content: "";
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M100 250 L225 750 L350 450 L500 750 L650 450 L775 750 L900 250 L900 200 L100 200 Z" fill="currentColor"/></svg>');
-    background-size: contain;
-    background-repeat: no-repeat;
-    vertical-align: middle;
-}
 
 /*  Duplication of the FontAwesome style classes using 'ai' in place of 'fa'. */
 .ai-lg {
@@ -366,4 +346,28 @@
 }
 .fa.fa-pull-right {
   margin-left: .3em;
+}
+
+
+/* 强制覆盖 - 添加到CSS文件末尾 */
+.ai.ai-Tech_Wiki-square:before {
+    content: "" !important;
+    display: inline-block !important;
+    width: 1em !important;
+    height: 1em !important;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M100 250 L225 750 L350 450 L500 750 L650 450 L775 750 L900 250 L900 200 L100 200 Z" fill="currentColor"/></svg>') !important;
+    background-size: contain !important;
+    background-repeat: no-repeat !important;
+    vertical-align: middle !important;
+}
+
+.ai.ai-Tech_Wiki:before {
+    content: "" !important;
+    display: inline-block !important;
+    width: 1em !important;
+    height: 1em !important;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M100 250 L225 750 L350 450 L500 750 L650 450 L775 750 L900 250 L900 200 L100 200 Z" fill="currentColor"/></svg>') !important;
+    background-size: contain !important;
+    background-repeat: no-repeat !important;
+    vertical-align: middle !important;
 }
